feat: allow admin to run rounds immediately
